# nottingham-timetable

./: LICENSE  README.md  app.py  generate_ics.py  parser.py  pyproject.toml  timetable_parser.py
